# ownPod

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md
.github/workflows/: build.yml
case/: ipod-case.scad
firmware/: CMakeLists.txt
firmware/include/: audio.h  config.h  display.h  input.h  library.h  lv_conf.h  spotify.h
firmware/src/: main.cpp
firmware/src/audio/: audio_engine.cpp
firmware/src/display/: display_driver.cpp
firmware/src/input/: input_driver.cpp
firmware/src/spotify/: spotify_controller.cpp
firmware/src/ui/: ui_manager.cpp  ui_manager.h
hardware/kicad/: CIRCUIT_REFERENCE.md  ipod-hat.kicad_pcb  ipod-hat.kicad_pro  ipod-hat.kicad_sch  ipod-hat.kicad_sym
scripts/: setup-pi.sh
